array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  for (i <- 1 to num.size){
    
  }
}